--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
     <div class="logo-container">
-        <img src="img/logo.jpg" alt="Logo">
+        <img src="img/logo.jpg" alt="Logo MOTIKA">
     </div>
 
     <div class="header-texto">
@@ -49,3 +49,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
