--- a/admin/admin.html
+++ b/admin/admin.html
@@ -46,7 +46,7 @@
     projectId: "motika-751ee",
     storageBucket: "motika-751ee.firebasestorage.app",
     messagingSenderId:"260880167433",
-    appId: ""1:260880167433:web:d0cd51752c25637fd83ed8"",
+    appId: "1:260880167433:web:d0cd51752c25637fd83ed8",
     measurementId: "G-X0P8L7C5GH"
   };
 
