--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
     <h2>Productos actuales</h2>
     <div id="lista"></div>
 </section>
-<!-- Firebase SDK -->
+
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
@@ -44,10 +44,9 @@
     apiKey: "AIzaSyCzd4E8mJ7zyzoddBQXmfB43-Mhu1BCPJQ",
     authDomain: "motika-751ee.firebaseapp.com",
     projectId: "motika-751ee",
-    storageBucket: "motika-751ee.firebasestorage.app",
-    messagingSenderId:"260880167433",
-    appId: "1:260880167433:web:d0cd51752c25637fd83ed8",
-    measurementId: "G-X0P8L7C5GH"
+    storageBucket: "motika-751ee.appspot.com",
+    messagingSenderId: "260880167433",
+    appId: "1:260880167433:web:d0cd51752c25637fd83ed8"
   };
 
   firebase.initializeApp(firebaseConfig);
