Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <select id="filtroCategoria">
         <option value="todas">Todas las Categorías</option>
     </select>
-    <div class="item-info">📍 Villa Páez y Herrán</div>
-    <div class="item-info">🚚 Pedidos dentro de la ciudad</div>
+    <div class="item-info">📍 Villa Páez-Herrán</div>
+    <div class="item-info">🚚 Pedidos a todo Destino</div>
     <div class="item-info">📲 Consultas por WhatsApp</div>
 </div>
 
