--- a/index.html
+++ b/index.html
@@ -2,47 +2,50 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOTIKA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="header">
-    <img src="img/logo.jpg" alt="MOTIKA" class="logo">
-    <h1>MOTIKA</h1>
-    <p>Tenemos lo que tú necesitas</p>
-    <p>Villa Páez</p>
+    <div class="logo">
+        <img src="img/logo.jpg" alt="Logo MOTIKA">
+    </div>
+    <div class="header-texto">
+        <h1>MOTIKA</h1>
+        <p>Tenemos lo que tú necesitas</p>
+        <p>Villa Páez</p>
+    </div>
 </header>
 
-<div class="franja-info">
+<nav class="franja-info">
+    <div class="item-info">📍 Villa Páez – Herrán</div>
+    <div class="item-info">🚚 Pedidos a todo destino</div>
+    <div class="item-info">📲 Consultas por WhatsApp</div>
     <select id="filtroCategoria">
         <option value="todas">Todas las Categorías</option>
     </select>
-    <div>📍 Villa Páez–Herrán</div>
-    <div>🚚 Pedidos a todo destino</div>
-    <div>📲 Consultas por WhatsApp</div>
-</div>
+</nav>
 
 <div class="buscador-container">
     <input type="text" id="buscador" placeholder="Buscar producto...">
 </div>
 
-<button id="btnAbrirCarrito" class="btn-carrito-fijo">🛒</button>
+<button id="btnAbrirCarrito" class="btn-carrito">🛒</button>
 
 <main>
     <div id="productos" class="grid-productos"></div>
 </main>
 
-<div id="carrito" class="carrito">
+<section id="carrito" class="carrito">
     <h2>Carrito</h2>
     <div id="listaCarrito"></div>
     <a id="btnComprar" target="_blank">Hacer pedido</a>
-</div>
+</section>
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-
 <script>
 const firebaseConfig = {
     apiKey: "AIzaSyCzd4E8mJ7zyzoddBQXmfB43-Mhu1BCPJQ",
@@ -52,7 +55,6 @@ const firebaseConfig = {
     messagingSenderId: "260880167433",
     appId: "1:260880167433:web:d0cd51752c25637fd83ed8"
 };
-
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
 </script>
