Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="admin.css">
 </head>
 <body>
+    <div id="loginBox">
+  <h2>Acceso administrador</h2>
+
+  <input type="email" id="email" placeholder="Correo" />
+  <input type="password" id="password" placeholder="Contraseña" />
+
+  <button id="btnLogin">Ingresar</button>
+
+  <p id="loginError" style="color:red; display:none;">
+    Credenciales incorrectas
+  </p>
+</div>
+
+<div id="adminPanel" style="display:none;">
+  <!-- TODO tu contenido actual del admin va aquí -->
+</div>
 
 <h1>Panel de Administración</h1>
 
