--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin - Productos</title>
-    <link rel="stylesheet" href="admin.css">
+  <meta charset="UTF-8">
+  <title>Admin - Productos</title>
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-    <div id="loginBox">
+
+<!-- LOGIN -->
+<div id="loginBox">
   <h2>Acceso administrador</h2>
 
   <input type="email" id="email" placeholder="Correo" />
@@ -19,41 +21,44 @@
   </p>
 </div>
 
+<!-- PANEL ADMIN -->
 <div id="adminPanel" style="display:none;">
-  <!-- TODO tu contenido actual del admin va aquí -->
-</div>
 
-<h1>Panel de Administración</h1>
+  <h1>Panel de Administración</h1>
 
-<section>
+  <section>
     <input type="text" id="nombre" placeholder="Nombre del producto">
     <input type="text" id="precio" placeholder="Precio">
 
     <select id="categoriaProducto"></select>
 
     <label>
-        <input type="checkbox" id="disponible" checked>
-        Disponible en tienda
+      <input type="checkbox" id="disponible" checked>
+      Disponible en tienda
     </label>
 
     <input type="text" id="imagen" placeholder="URL de imagen">
     <button id="agregar">Agregar producto</button>
-</section>
+  </section>
 
-<section>
+  <section>
     <h2>Categorías</h2>
     <input type="text" id="nombreCategoria" placeholder="Nombre de la categoría">
     <button id="agregarCategoria">Agregar categoría</button>
     <div id="listaCategorias"></div>
-</section>
+  </section>
 
-<section>
+  <section>
     <h2>Productos actuales</h2>
     <div id="lista"></div>
-</section>
+  </section>
 
+</div>
+
+<!-- FIREBASE -->
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
 <script>
   const firebaseConfig = {
@@ -67,6 +72,7 @@
 
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
+  const auth = firebase.auth();
 </script>
 
 <script src="admin.js"></script>
