Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -22,6 +22,10 @@
 </div>
 
 <!-- PANEL ADMIN -->
+
+<button id="btnLogout" style="background:#e74c3c; margin-bottom:15px;">
+  Cerrar sesión
+</button>
 <div id="adminPanel" style="display:none;">
 
   <h1>Panel de Administración</h1>
