Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -44,6 +44,10 @@
     <input type="text" id="imagen" placeholder="URL de imagen">
     <button id="agregar">Agregar producto</button>
   </section>
+  
+  <p id="mensajeProducto" style="display:none; color:green; margin-top:10px;">
+  Producto agregado correctamente
+</p>
 
   <section>
     <h2>Categorías</h2>
