Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -32,6 +32,11 @@
   </button>
 
   <h1>Panel de Administración</h1>
+  
+<button onclick="location.href='productos.html'"
+        style="background:#3498db; color:white; padding:10px 15px; border:none; cursor:pointer; margin-bottom:20px;">
+  Gestionar productos
+</button>
 
   <!-- MENSAJE DE CONFIRMACIÓN -->
   <p id="mensajeProducto" style="display:none; color:green; margin-top:10px;">
