Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -81,7 +81,7 @@
   <!-- PRODUCTOS ACTUALES -->
   <section style="margin-top:30px;">
     <h2>Productos actuales</h2>
-    <div id="lista" style="margin-top:15px;"></div>
+  <div id="lista" style="display:none;"></div>
   </section>
 
 </div>
