Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -75,7 +75,7 @@
       Agregar categoría
     </button>
 
-    <div id="listaCategorias" style="margin-top:15px;"></div>
+    <div id="listaCategorias" style="display:none;"></div>
   </section>
 
   <!-- PRODUCTOS ACTUALES -->
