Actualizar productos.html

--- a/admin/productos.html
+++ b/admin/productos.html
@@ -14,7 +14,19 @@
 
 <hr>
 
-<div id="listaProductos"></div>
+<div style="display:flex; gap:40px; align-items:flex-start;">
+
+  <div style="flex:1;">
+    <h3>Productos actuales</h3>
+    <div id="listaProductos"></div>
+  </div>
+
+  <div style="flex:1;">
+    <h3>Categorías actuales</h3>
+    <div id="listaCategorias"></div>
+  </div>
+
+</div>
 
 <!-- FIREBASE -->
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
