--- a/admin/productos.html
+++ b/admin/productos.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Gestión de Productos - MOTIKA</title>
+<meta charset="UTF-8">
+<title>Gestión de Productos</title>
 </head>
 <body>
 
 <h1>Gestión de Productos</h1>
 
-<button onclick="location.href='admin.html'">
-  Volver al panel
-</button>
-
+<button onclick="location.href='admin.html'">Volver</button>
 <hr>
 
-<div style="display:flex; gap:40px; align-items:flex-start;">
-
+<div style="display:flex; gap:40px;">
   <div style="flex:1;">
     <h3>Productos actuales</h3>
     <div id="listaProductos"></div>
@@ -25,30 +21,22 @@
     <h3>Categorías actuales</h3>
     <div id="listaCategorias"></div>
   </div>
-
 </div>
 
-<!-- FIREBASE -->
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
 <script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCzd4E8mJ7zyzoddBQXmfB43-Mhu1BCPJQ",
-    authDomain: "motika-751ee.firebaseapp.com",
-    projectId: "motika-751ee",
-    storageBucket: "motika-751ee.appspot.com",
-    messagingSenderId: "260880167433",
-    appId: "1:260880167433:web:d0cd51752c25637fd83ed8"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const auth = firebase.auth();
+firebase.initializeApp({
+  apiKey: "AIzaSyCzd4E8mJ7zyzoddBQXmfB43-Mhu1BCPJQ",
+  authDomain: "motika-751ee.firebaseapp.com",
+  projectId: "motika-751ee"
+});
+const db = firebase.firestore();
+const auth = firebase.auth();
 </script>
 
 <script src="productos.js"></script>
-
 </body>
 </html>
