Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -29,6 +29,17 @@
   </button>
 
   <h1>Panel de Administración</h1>
+  
+  <div id="toast" style="
+  display:none;
+  padding:12px 16px;
+  background:#2ecc71;
+  color:white;
+  border-radius:6px;
+  margin:15px 0;
+  font-weight:600;
+">
+</div>
 
   <button onclick="location.href='productos.html'"
     style="background:#3498db; color:white; padding:10px; border:none; margin-bottom:20px;">
