Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -60,8 +60,8 @@
 
     <input id="imagen" placeholder="URL imagen" style="width:100%; padding:8px; margin-top:10px;">
 
-    <button id="agregar" style="width:100%; padding:10px; margin-top:10px;">
-      Agregar producto
+  <button id="agregar" type="button" style="width:100%; padding:10px; margin-top:10px;">
+  Agregar producto
     </button>
   </section>
 
