--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,15 +6,14 @@
   <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-
 <!-- LOGIN -->
-<div id="loginBox" style="max-width:400px; margin:auto; padding:20px;">
+<div id="loginBox" class="container">
   <h2>Acceso administrador</h2>
 
-  <input type="email" id="email" placeholder="Correo" style="width:100%; padding:8px; margin-top:10px;">
-  <input type="password" id="password" placeholder="Contraseña" style="width:100%; padding:8px; margin-top:10px;">
+  <input type="email" id="email" placeholder="Correo">
+  <input type="password" id="password" placeholder="Contraseña">
 
-  <button id="btnLogin" type="button" style="width:100%; padding:10px; margin-top:15px; background:#25d366; color:white; border:none;">
+  <button id="btnLogin" type="button" class="btn btn-green">
     Ingresar
   </button>
 
@@ -22,73 +21,50 @@
 </div>
 
 <!-- PANEL -->
-<div id="adminPanel" style="display:none; max-width:800px; margin:auto; padding:20px;">
-
-  <button id="btnLogout" type="button" style="background:#e74c3c; color:white; padding:8px 12px; border:none;">
-    Cerrar sesión
-  </button>
+<div id="adminPanel" class="container" style="display:none;">
 
   <h1>Panel de Administración</h1>
 
-  <!-- TOAST -->
-  <div id="toast" style="
-    display:none;
-    padding:12px 16px;
-    background:#2ecc71;
-    color:white;
-    border-radius:6px;
-    margin:15px 0;
-    font-weight:600;
-  "></div>
-
-  <button type="button" onclick="location.href='productos.html'"
-    style="background:#3498db; color:white; padding:10px; border:none; margin-bottom:20px;">
-    Gestionar productos
-  </button>
+  <div id="toast"></div>
 
   <!-- PRODUCTOS -->
   <section>
-    <input id="nombre" placeholder="Nombre del producto" style="width:100%; padding:8px;">
-    <input id="precio" placeholder="Precio" style="width:100%; padding:8px; margin-top:10px;">
-    <select id="categoriaProducto" style="width:100%; padding:8px; margin-top:10px;"></select>
+    <input id="nombre" placeholder="Nombre del producto">
+    <input id="precio" placeholder="Precio">
+    <select id="categoriaProducto"></select>
 
     <label style="margin-top:10px; display:block;">
       <input type="checkbox" id="disponible" checked> Disponible
     </label>
 
-    <input id="imagen" placeholder="URL imagen" style="width:100%; padding:8px; margin-top:10px;">
+    <input id="imagen" placeholder="URL imagen">
 
-    <button id="agregar" type="button" style="width:100%; padding:10px; margin-top:10px;">
+    <button id="agregar" type="button" class="btn btn-green">
       Agregar producto
     </button>
   </section>
 
   <!-- CATEGORÍAS -->
-  <section style="margin-top:30px;">
+  <section>
     <h3>Agregar categoría</h3>
-    <input id="nombreCategoria" placeholder="Nombre categoría" style="width:100%; padding:8px;">
-    <button id="agregarCategoria" type="button" style="width:100%; padding:10px; margin-top:10px;">
+    <input id="nombreCategoria" placeholder="Nombre categoría">
+    <button id="agregarCategoria" type="button" class="btn btn-green">
       Agregar categoría
     </button>
   </section>
 
+  <!-- BOTONES FINALES -->
+  <div class="bottom-actions">
+    <button type="button" onclick="location.href='productos.html'" class="btn btn-blue">
+      Gestionar productos
+    </button>
+
+    <button id="btnLogout" type="button" class="btn btn-red">
+      Cerrar sesión
+    </button>
+  </div>
+
 </div>
 
-<!-- FIREBASE -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-
-<script>
-firebase.initializeApp({
-  apiKey: "AIzaSyCzd4E8mJ7zyzoddBQXmfB43-Mhu1BCPJQ",
-  authDomain: "motika-751ee.firebaseapp.com",
-  projectId: "motika-751ee"
-});
-const db = firebase.firestore();
-const auth = firebase.auth();
-</script>
-
-<script src="admin.js"></script>
 </body>
 </html>
