--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="admin.css">
 </head>
 <body>
+
 <!-- LOGIN -->
 <div id="loginBox" class="container">
   <h2>Acceso administrador</h2>
@@ -65,6 +66,20 @@
   </div>
 
 </div>
+
+<!-- 🔥 FIREBASE (RESTAURADO) -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+<script>
+  firebase.initializeApp({
+    apiKey: "TU_API_KEY",
+    authDomain: "motika-751ee.firebaseapp.com",
+    projectId: "motika-751ee"
+  });
+</script>
+
 <script src="admin.js"></script>
 </body>
 </html>
