--- a/admin/admin.html
+++ b/admin/admin.html
@@ -23,7 +23,6 @@
 
 <!-- PANEL -->
 <div id="adminPanel" class="container" style="display:none;">
-
   <h1>Panel de Administración</h1>
 
   <div id="toast"></div>
@@ -64,17 +63,16 @@
       Cerrar sesión
     </button>
   </div>
-
 </div>
 
-<!-- 🔥 FIREBASE (RESTAURADO) -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<!-- 🔥 FIREBASE COMPAT (COMO ANTES FUNCIONABA) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <script>
   firebase.initializeApp({
-    apiKey: "TU_API_KEY",
+    apiKey: "AIzaSyCzd4E8mJ7zyzoddBQXmfB43-Mhu1BCPJQ",
     authDomain: "motika-751ee.firebaseapp.com",
     projectId: "motika-751ee"
   });
