--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Admin - MOTIKA</title>
   <link rel="stylesheet" href="admin.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
