Add header for 'moto repuestos' in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <img src="img/logo.jpg" alt="Logo MOTIKA">
     </div>
     <div class="header-texto">
+        <h1>moto repuestos</h1>
         <h1>MOTIKA</h1>
         <p>Tenemos lo que tú necesitas</p>
         <p>Villa Páez</p>
