Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <img src="img/logo.jpg" alt="Logo MOTIKA">
     </div>
     <div class="header-texto">
-        <h1>moto repuestos</h1>
-        <h1>MOTIKA</h1>
+        <h2 class="subtitulo-logo">Motorepuestos</h2>
+        <h1 class="titulo-principal">MOTIKA</h1>
         <p>Tenemos lo que tú necesitas</p>
         <p>Villa Páez</p>
     </div>
