Add total price display to shopping cart section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 <section id="carrito" class="carrito">
     <h2>Carrito</h2>
     <div id="listaCarrito"></div>
+    <div id="contenedorTotal" class="total-carrito">
+        <span>Total:</span>
+        <span id="precioTotal">$0</span>
+    </div>
     <a id="btnComprar" target="_blank">Hacer pedido</a>
 </section>
 
