Actualizar productos.html

--- a/admin/productos.html
+++ b/admin/productos.html
@@ -10,6 +10,11 @@
 
 <button onclick="location.href='admin.html'">Volver</button>
 <hr>
+  
+<style>
+  .edit-box input { display: block; margin-bottom: 5px; width: 100%; padding: 5px; }
+  .btn-editar { background: #3498db; color: white; border: none; padding: 6px 10px; cursor: pointer; margin-right: 5px; border-radius: 4px; }
+</style>
 
 <div style="display:flex; gap:40px;">
   <div style="flex:1;">
