Actualizar productos.html

--- a/admin/productos.html
+++ b/admin/productos.html
@@ -37,6 +37,9 @@
     <h3>Productos actuales</h3>
     <div id="listaProductos"></div>
   </div>
+  
+  <input type="text" id="buscador" placeholder="🔍 Buscar por nombre o categoría..." style="width:100%; padding:12px; margin-bottom:20px; border-radius:8px; border:1px solid #ddd; box-sizing: border-box;">
+
 
   <div style="flex:1;">
     <h3>Categorías actuales</h3>
