--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <title>MOTIKA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Estilo para que las imágenes no causen saltos de página */
+        .contenedor-img { min-height: 200px; background: #f0f0f0; }
+        img { content-visibility: auto; }
+    </style>
 </head>
 <body>
 
 <header class="header">
-    <div class="logo">
-        <img src="img/logo.jpg" alt="Logo MOTIKA">
-    </div>
+    <div class="logo"><img src="img/logo.jpg" alt="Logo MOTIKA"></div>
     <div class="header-texto">
         <h2 class="subtitulo-logo">Motorepuestos</h2>
         <h1 class="titulo-principal">MOTIKA</h1>
@@ -23,13 +26,12 @@
     <div class="item-info">📍 Villa Páez – Herrán</div>
     <div class="item-info">🚚 Pedidos a todo destino</div>
     <div class="item-info">📲 Consultas por WhatsApp</div>
-    </nav>
+</nav>
+
+<div class="buscador-container">
     <select id="filtroCategoria">
         <option value="todas">Todas las Categorías</option>
     </select>
-
-
-<div class="buscador-container">
     <input type="text" id="buscador" placeholder="Buscar producto...">
 </div>
 
@@ -51,6 +53,7 @@
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
 <script>
 const firebaseConfig = {
     apiKey: "AIzaSyCzd4E8mJ7zyzoddBQXmfB43-Mhu1BCPJQ",
