Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </main>
 
 <section id="carrito" class="carrito">
+    <button id="btnCerrarCarrito" class="btn-cerrar-panel">✕</button> <h2>Carrito</h2>
     <h2>Carrito</h2>
     <div id="listaCarrito"></div>
     <div id="contenedorTotal" class="total-carrito">
