Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 </main>
 
 <section id="carrito" class="carrito">
-    <button id="btnCerrarCarrito" class="btn-cerrar-panel">✕</button> <h2>Carrito</h2>
-    <h2>Carrito</h2>
+    <button id="btnCerrarCarrito" class="btn-cerrar-panel">✕</button>
+    <h2>Mi Pedido</h2>
     <div id="listaCarrito"></div>
     <div id="contenedorTotal" class="total-carrito">
         <span>Total:</span>
         <span id="precioTotal">$0</span>
     </div>
-    <a id="btnComprar" target="_blank">Hacer pedido</a>
+    <a id="btnComprar" target="_blank">Finalizar Pedido</a>
 </section>
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
