Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -22,11 +22,23 @@
     </div>
 </header>
 
-<nav class="franja-info">
-    <div class="item-info">📍 Villa Páez – Herrán</div>
-    <div class="item-info">🚚 Pedidos a todo destino</div>
-    <div class="item-info">📲 Consultas por WhatsApp</div>
-</nav>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+<div class="franja-info">
+    <div class="item-info">
+        <i class="fa-solid fa-location-dot"></i>
+        <span>Villa Páez – Herrán</span>
+    </div>
+    <div class="item-info">
+        <i class="fa-solid fa-truck-fast"></i>
+        <span>Pedidos a todo destino</span>
+    </div>
+    <div class="item-info">
+        <i class="fa-brands fa-whatsapp"></i>
+        <span>Consultas por WhatsApp</span>
+    </div>
+</div>
+
 
 <div class="buscador-container">
     <select id="filtroCategoria">
