--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <span>Total:</span>
         <span id="precioTotal">$0</span>
     </div>
-    <a id="btnComprar" target="_blank">Finalizar Pedido</a>
+    <a id="btnComprar" target="_blank">Hacer Pedido📲</a>
 </section>
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
