Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -81,5 +81,11 @@ const db = firebase.firestore();
 </script>
 
 <script src="script.js"></script>
+<a href="https://wa.me/573118612727?text=Hola%20Motika!%20👋%20Tengo%20una%20consulta." 
+   class="btn-whatsapp-fijo" 
+   target="_blank">
+    <i class="fa-brands fa-whatsapp"></i>
+</a>
+
 </body>
 </html>
