Actualizar admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -67,7 +67,7 @@
     <select id="estado">
       <option value="disponible">Disponible en Tienda (Carrito)</option>
       <option value="encargar">Para Encargar (Carrito)</option>
-      <option value="consultar">Solo Consultar (WhatsApp directo)</option>
+    <option value="reposicion">En reposición (Apartar)</option>
     </select>
 
     <label>📷 Imagen del producto:</label>
