--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>MOTIKA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W16RJCRNPD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W16RJCRNPD');
+</script>
     <link rel="stylesheet" href="style.css">
     <style>
         /* Estilo para que las imágenes no causen saltos de página */
